# rokoko-studio-live-maya

./: .gitignore  CMakeLists.txt  README.md  maya_qtconfig  maya_qtconfig_linux  maya_qtconfig_macos  resources.qrc  rslm.pro
cmake/Qt5Core/: Qt5CoreConfig.cmake
cmake/Qt5Gui/: Qt5GuiConfig.cmake  Qt5Gui_QGifPlugin.cmake  Qt5Gui_QICNSPlugin.cmake  Qt5Gui_QICOPlugin.cmake  Qt5Gui_QJpegPlugin.cmake  Qt5Gui_QMinimalIntegrationPlugin.cmake  Qt5Gui_QOffscreenIntegrationPlugin.cmake  Qt5Gui_QTgaPlugin.cmake  Qt5Gui_QTiffPlugin.cmake  Qt5Gui_QTuioTouchPlugin.cmake  Qt5Gui_QWbmpPlugin.cmake  Qt5Gui_QWebGLIntegrationPlugin.cmake  Qt5Gui_QWebpPlugin.cmake  Qt5Gui_QWindowsDirect2DIntegrationPlugin.cmake  Qt5Gui_QWindowsIntegrationPlugin.cmake  Qt5Gui_QXdgDesktopPortalThemePlugin.cmake
cmake/Qt5Network/: Qt5NetworkConfig.cmake  Qt5Network_QGenericEnginePlugin.cmake
cmake/Qt5Widgets/: Qt5WidgetsConfig.cmake  Qt5Widgets_QWindowsVistaStylePlugin.cmake
resources/: createFaceAttributes.mel  createHIKForActor.mel  deleteMappingAttribute.mel  fetchBlendShapes.mel  mapToSelectedObjects.mel  selectMappedObjects.mel  setOrCreateRSIdAttribute.mel  style.qss  unmapRSObject.mel
src/: animations.cpp  animations.h  constants.h  framework.h  interfaces.h  jsonv2parser.cpp  jsonv2parser.h  jsonv3parser.cpp  jsonv3parser.h  main.cpp  mapping.cpp  mapping.h  receiverworker.cpp  receiverworker.h  recorder.cpp  recorder.h  rootwidget.cpp  singleton.h  utils.cpp  utils.h
src/ui/: button.cpp  button.h  categoryheader.cpp  categoryheader.h  commandapicontent.cpp  commandapicontent.h  infocontent.cpp  infocontent.h  receivercontent.cpp  receivercontent.h  recordbutton.cpp  recordbutton.h  rootwidget.cpp  rootwidget.h  updatercontent.cpp  updatercontent.h
